<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">droid-alerter</string>
    <string name="pref_vibration_title">Vibrate</string>
    <string name="pref_blue_glob_title">Blue alerts</string>
    <string name="pref_speak_title">Speak</string>
    <string name="pref_yellow_glob_title">Yellow alerts</string>
    <string name="pref_red_glob_title">Red alerts</string>
    <string name="action_show_config">Configure</string>
</resources>